--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:a-star32U4]
-platform = atmelavr
-board = a-star32U4
+[env:esp8266]
+platform = espressif8266
+board = nodemcu
 framework = arduino
 
 lib_deps =
      Adafruit WS2801 Library
-     AStar32U4
      FastLED
