--- a/platformio.ini
+++ b/platformio.ini
@@ -14,5 +14,6 @@ board = nodemcuv2
 framework = arduino
 
 lib_deps =
-     Adafruit WS2801 Library
      FastLED
+     me-no-dev/ESP Async WebServer
+     me-no-dev/ESPAsyncTCP
